--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=6118d2637c769baf0d83ec5a8602d515
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-meta ###
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-meta ###
 
 ###> doctrine/doctrine-bundle ###
@@ -27,7 +27,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:SvVtuFW4j2@mysql:3306/ic?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://login:password@mysql:3306/db_name?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
