--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,14 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    _instanceof:
+
+        App\Response\Interfaces\ResponseInterface:
+            tags: [ 'app.response.strategy' ]
+
+        App\Response\Interfaces\CallbackInterface:
+            tags: [ 'app.response.callback' ]
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
